# essay-data-prep

./: .gitignore  .pre-commit-config.yml  .prompt.txt  pyproject.toml  readme.md
.gemini/: settings.json
.github/workflows/: gemini-automated-issue-patching.yml  gemini-automated-issue-triage.yml  gemini-automated-readme-write  gemini-automated-readme-write.yml  generate-readme.yml
issue_reports/: gibberish_issues.csv  issue_report-20250703-172713.md  off_the_prompt_issues.csv  prompt_similar_essays_issues.csv  suspect_scoring_issues.csv
scripts/: format.sh  test.sh
src/: base_issue.py  clean.py  prompts.py  quality_check.py  report.py  utils.py  writer.py
src/annotators/: annotator.py  base_annotators.py
src/callbacks/: annotator_callbacks.py  base_callbacks.py  issue_finder_callbacks.py
src/issue_finders/: base_finder.py  duplicate_finders.py  gibberish_finders.py  similarity_finders.py
src/preprocessors/: base_preprocessor.py  preprocessor.py
