[project]
name = "essay-data-prep"
version = "0.1.0"
description = "essay data preparation for training or evaluating the AI model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "tabulate>=0.9.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "rich>=14.0.0",
]
